# hyundai_kia_connect_api

./: .gitignore  .markdownlint.jsonc  CLAUDE.md  mypy.ini  pyproject.toml  pyrightconfig.json
scripts/: HyundaiFetchApiTokensSelenium.py  aliases.sh  get-token.sh
